<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_bottom"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:title="@string/pantalla_formulario"
                app:titleTextColor="@color/white"
                 />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreTF"
            style="@style/formulariosLayout"
            android:hint="@string/nombreLabel"
            app:hintTextColor="@color/dark_pink"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formTxtImputNombre"
                style="@style/formulariosTxtImput" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="@style/layoutAux"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/fechaNacLabel"

                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:theme="@style/Widget.MaterialComponents.Toolbar.Primary">

            </TextView>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />
            <TextView
                android:id="@+id/fechaNac"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:paddingLeft="15dp"
                android:gravity="center_vertical"
                style="@style/formulariosTxtImput"
                android:text="Seleccione una fecha"
                >

            </TextView>

            <Button
                android:id="@+id/btnSeleccionar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/btnSeleccionarFecha"
                android:theme="@style/Widget.MaterialComponents.Button"
                >
            </Button>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefonoTF"
            style="@style/formulariosLayout"
            android:hint="@string/telefonoLabel"
            app:hintTextColor="@color/dark_pink"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formTxtImputTel"
                style="@style/formulariosTxtImput"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTF"
            style="@style/formulariosLayout"
            android:hint="@string/emailLabel"
            app:hintTextColor="@color/dark_pink"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formTxtImputEmail"
                style="@style/formulariosTxtImput"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcionTF"
            android:hint="@string/descripcionLabel"
            style="@style/formulariosLayout"
            app:hintTextColor="@color/dark_pink"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formTxtImputDes"
                style="@style/formulariosTxtImput"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSiguiente"
            android:textSize="@dimen/btnSiguiente"
            android:theme="@style/Widget.MaterialComponents.Button"
            >
        </Button>

    </LinearLayout>

</ScrollView>

